// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearRefinements should render <ClearRefinements /> 1`] = `
Array [
  <div
    className="root"
  >
    Array [
      <button
        className="button"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        disabled={false}
        onClick={[Function]}
      />,
    ]
  </div>,
]
`;

exports[`ClearRefinements should render <ClearRefinements /> with a specific class when no refinements 1`] = `
Array [
  <div
    className="root"
  >
    Array [
      <button
        className="button disabled"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
        disabled={true}
        onClick={[Function]}
      />,
    ]
  </div>,
]
`;
